--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,11 @@
     "axios": "^0.19.0",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "react-simple-image-slider": "^2.0.3",
+    "react-slick": "^0.28.1"
   },
   "scripts": {
     "start": "react-scripts start",
